# 0-CI

./: .gitignore  README.md  _config.yml  config.toml  wsgi.py  zero_ci.ini
backend/: pyproject.toml  worker.py  zero_ci.py  zeroci.py  zeroci_worker.py
backend/actions/: actions.py  reporter.py  runner.py  trigger.py  validator.py  yaml_validation.py
backend/apis/: base.py  config.py  default.py  login.py  results.py  schedule.py  trigger.py  websockets.py
backend/bcdb/: bcdb.py
backend/deployment/: container.py
backend/deployment/kube_templates/: pod.yaml  service.yaml
backend/health/: cleanup.py  health_check.py  health_recover.py  remove.py
backend/models/: base.py  bcdb.py  initial_config.py  run.py  run_config.py  schedule_info.py  scheduler_run.py  trigger_run.py
backend/mongo/: db.py
backend/utils/: config.py  constants.py  reporter.py  utils.py
backend/vm/: vms.py
docs/: installation.md  life_cycle.md
docs/config/: neph.yaml  nosetests.yaml  zeroCI.yaml
frontend/: README.md  index.html  package-lock.json  package.json
frontend/config/: dev.env.js  index.js  prod.env.js
frontend/frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/assets/: scripts.bundle.js
frontend/src/components/: 404.vue  Activity.vue  (+49 more)
install/: Dockerfile  cron  jsng_config.toml  nginx.conf  requirement.txt  run.sh  startup.sh
install/config/: jsng_config.toml  redis.conf
install/zeroci/: authorization.yaml  deployment.yaml  redis.yaml  service.yaml
services/: rqworker@.service  zero_ci.service  zeroci.service
(+24 files in other folders)
